Fix styling issues | Added route for viewing products on mobile | closes #15

--- a/src/styles/5 - components/_pricerange.scss
+++ b/src/styles/5 - components/_pricerange.scss
@@ -9,7 +9,7 @@
   width: 100%;
   height: 30px;
   display: flex;
-  margin-bottom: 1rem;
+  margin-bottom: 3rem;
 }
 
 .price-range-slider {
